# Aurora

./: .gitignore  Cargo.toml  README.md
app/: index.html  package.json  pnpm-lock.yaml
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: AppShell.module.css  AppShell.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  EmptyState.module.css  EmptyState.tsx  LaunchControl.tsx  LogConsole.tsx  Modal.tsx  PageHeader.module.css  PageHeader.tsx  PlaceholderPage.tsx  Select.tsx  Sidebar.module.css  Sidebar.tsx  SkinHead.tsx  Titlebar.tsx  Toast.tsx  Toggle.tsx  auroraPath.ts  icons.tsx
app/src/lib/: ipc-mock.ts  ipc.ts  motion-pref.tsx  motion.ts  tauri-bridge.ts
app/src/pages/: Account.tsx  Download.tsx  Home.module.css  Home.tsx  Resources.tsx  Settings.tsx  Versions.tsx
app/src/styles/: app.css  theme.css
crates/aurora-auth/: Cargo.toml
crates/aurora-auth/src/: account.rs  credential.rs  dpapi.rs  error.rs  lib.rs  microsoft.rs  offline.rs  yggdrasil.rs
crates/aurora-base/: Cargo.toml
crates/aurora-base/src/: error.rs  fs.rs  http.rs  lib.rs  mirror.rs  retry.rs
crates/aurora-cli/: Cargo.toml
crates/aurora-cli/src/: main.rs
crates/aurora-core/: Cargo.toml
crates/aurora-core/src/: auth.rs  config.rs  error.rs  event.rs  facade.rs  install.rs  java.rs  launch.rs  lib.rs  mods.rs  search.rs  versions.rs
crates/aurora-download/: Cargo.toml
crates/aurora-download/src/: chunk.rs  engine.rs  error.rs  lib.rs  pool.rs  progress.rs  source.rs  task.rs
crates/aurora-download/tests/: mock_paths.rs
crates/aurora-install/: Cargo.toml  build.rs
crates/aurora-install/src/: complete.rs  context.rs  error.rs  fabric.rs  forge.rs  layout.rs  lib.rs  maven.rs  natives.rs  net.rs  plan.rs  vanilla.rs
crates/aurora-install/tests/: vanilla_install.rs
crates/aurora-instance/: Cargo.toml
crates/aurora-instance/src/: cache.rs  discovery.rs  error.rs  folder.rs  isolation.rs  lib.rs  profiles.rs  settings.rs
crates/aurora-java/: Cargo.toml
crates/aurora-java/src/: detect.rs  error.rs  lib.rs  runtime.rs  select.rs  version.rs
crates/aurora-launch/: Cargo.toml
crates/aurora-launch/src/: account.rs  args.rs  classpath.rs  command.rs  crash.rs  error.rs  lib.rs  memory.rs  placeholder.rs  precheck.rs  process.rs  workspace.rs
crates/aurora-launch/tests/: command_line.rs
crates/aurora-modplatform/: Cargo.toml
crates/aurora-modplatform/src/: aggregate.rs  curseforge.rs  error.rs  hash.rs  lib.rs  local.rs  model.rs  modrinth.rs  net.rs
crates/aurora-ui/: Cargo.toml
crates/aurora-ui/src/: anim.rs  app.rs  background.rs  ctx.rs  main.rs  scene.rs  theme.rs
crates/aurora-ui/src/pages/: accounts.rs  home.rs  mod.rs  mods.rs  settings.rs  versions.rs
crates/aurora-ui/src/widgets/: button.rs  card.rs  feedback.rs  icon.rs  input.rs  mod.rs  nav.rs
crates/aurora-version/: Cargo.toml
crates/aurora-version/src/: assets.rs  availability.rs  error.rs  identify.rs  lib.rs  loader.rs  manifest.rs  merge.rs  model.rs  rules.rs
crates/aurora-version/tests/: real_versions.rs
crates/aurora-version/tests/fixtures/: 1.12.2.json  1.21.json  fabric-loader-1.21.json  forge-1.12.2.json
docs/: architecture.md  azure-app-registration.md  frontend-design.md  handoff-design-mcp.md  pcl2-feature-inventory.md  pcl2-feature-matrix.json  ui-visual-spec.md
docs/design-explorations/shell/: editorial-desk.html
