[package]
name = "aurora-base"
version = "0.1.0"
edition = "2024"

[dependencies]
# 统一 HTTP 客户端工厂：禁用 native-tls 走 rustls，规避 Windows schannel 差异（architecture.md 三节）。
# http2/gzip/json/stream 是下游 download/modplatform crate 的共用刚需，集中在共享工厂里开一次。
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "gzip", "json", "stream"] }
# 库内只用 spawn_blocking(rt) + 异步文件 IO(fs/io-util) + 退避 sleep(time)；运行时风格由上层选择，不强制 rt-multi-thread。
tokio = { version = "1", default-features = false, features = ["rt", "fs", "io-util", "time"] }
thiserror = "2"
sha1 = "0.11"
sha2 = "0.11"
base16ct = { version = "1", features = ["alloc"] }
url = "2"
fastrand = "2"
tracing = "0.1"

[dev-dependencies]
# wiremock 需要真正的后台运行时，测试用 multi_thread flavor，故 dev 侧补 macros/rt-multi-thread。
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
