[package]
name = "aurora-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aurora-base = { path = "../aurora-base" }
aurora-auth = { path = "../aurora-auth" }
aurora-version = { path = "../aurora-version" }
aurora-java = { path = "../aurora-java" }
aurora-download = { path = "../aurora-download" }
aurora-instance = { path = "../aurora-instance" }
aurora-install = { path = "../aurora-install" }
aurora-modplatform = { path = "../aurora-modplatform" }
aurora-launch = { path = "../aurora-launch" }
