[package]
name = "aurora-install"
version = "0.1.0"
edition = "2024"

[dependencies]
aurora-base = { path = "../aurora-base" }
aurora-version = { path = "../aurora-version" }
aurora-download = { path = "../aurora-download" }
# 元数据抓取（Fabric/Quilt meta、版本 JSON、Forge maven-metadata）只用注入客户端的
# get/send/error_for_status/bytes；客户端与 TLS 栈由 aurora-base 统一构建，故不开 TLS/json 特性，
# 报文一律走 serde_json 自行解析（与 aurora-java 保持一致）。
reqwest = { version = "0.13.4", default-features = false }
# natives 解压与 Forge installer jar 解包只需读 zip（jar 用 store/deflate），关掉其余压缩算法。
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 运行时：异步落盘(fs/io-util)、并发池 spawn(rt)、进度 watch(sync)、Forge processors 子进程(process)。
tokio = { version = "1", default-features = false, features = ["rt", "fs", "io-util", "sync", "process"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
# 集成测试用 wiremock（需真正后台运行时），补 macros/rt-multi-thread。
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
wiremock = "0.6"
tempfile = "3"
# 端到端 mock 测试里需要为造出的字节现算 sha1 当作预置校验值。
sha1 = "0.11"
base16ct = { version = "1", features = ["alloc"] }
