[package]
name = "aurora-instance"
version = "0.1.0"
edition = "2024"

[dependencies]
aurora-base = { path = "../aurora-base" }
aurora-version = { path = "../aurora-version" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
# 目录扫描、版本 JSON 读取、配置原子落盘都是本地异步 IO；沿用 workspace 的 tokio。仅需 fs 特性，
# 原子写复用 aurora-base（其自带 io-util/rt），本 crate 不直接依赖那些特性。
tokio = { version = "1", default-features = false, features = ["fs"] }
# 版本列表哈希缓存：对排序后的文件夹名列表算 sha1，跨进程稳定；复用 aurora-base 的 RustCrypto 0.11 系。
sha1 = "0.11"
base16ct = { version = "1", features = ["alloc"] }
# launcher_profiles.json 需要随机 clientToken（v4 走系统 CSPRNG）。
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# 目录/文件 IO 测试需要真正的运行时；tempfile 提供隔离的临时游戏目录。
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
tempfile = "3"
