[package]
name = "aurora-java"
version = "0.1.0"
edition = "2024"

[dependencies]
aurora-base = { path = "../aurora-base" }
# 只用注入进来的 reqwest::Client 的核心方法（get/send/error_for_status/bytes），
# 不在本 crate 构建客户端，也不用 reqwest 的 json 解码（自己走 serde_json 以便对报文做 sha1 校验），
# 故 default-features=false 且不额外开 TLS/json 特性，客户端与 TLS 栈由 aurora-base 统一提供。
reqwest = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 仅用到 tokio::fs::create_dir_all（建空目录），其余异步落盘复用 aurora-base 的 atomic_write。
tokio = { version = "1", default-features = false, features = ["fs", "rt"] }
thiserror = "2"
tracing = "0.1"
# 下载报文/文件的 sha1 校验在内存里先行完成（校验失败即触发重试），故直接依赖 sha1 + base16ct，
# 与 aurora-base 选型保持一致。
sha1 = "0.11"
base16ct = { version = "1", features = ["alloc"] }

# 注册表探测只在 Windows 编译；其它平台留空实现作跨平台缝（architecture.md 一节）。
[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[dev-dependencies]
# 下载逻辑用本地 mock 验证；wiremock 需要多线程后台运行时，dev 侧补 macros/rt-multi-thread。
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
