[package]
name = "aurora-launch"
version = "0.1.0"
edition = "2024"

[dependencies]
aurora-auth = { path = "../aurora-auth" }
aurora-version = { path = "../aurora-version" }
aurora-java = { path = "../aurora-java" }
aurora-instance = { path = "../aurora-instance" }
# 进程管理需要 process（spawn 子进程）+ io-util（BufReader 逐行读输出）+ rt（spawn 读取任务）
# + sync（mpsc 把日志行实时投递给上层）。运行时风格（单/多线程）交由上层选择，不强制 rt-multi-thread。
tokio = { version = "1", default-features = false, features = ["process", "io-util", "rt", "sync"] }
# 崩溃诊断规则库从日志正则提取附加信息（缺失 Mod id、要求的 Java 版本等）。与 aurora-version 同选 regex 1。
regex = "1"
# 诊断结果 / 检查报告 / 退出码等面向前端的结构体需可序列化。
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
# 进程 spawn 与隔离解析的异步测试需要真正的运行时；tempfile 提供隔离的临时游戏目录。
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "process", "io-util", "rt", "sync"] }
tempfile = "3"
